# Atlas

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
campaigns/: discovery.yaml  iam_focus.yaml
config/: atlas.example.yaml
docs/: RELEASE.md  inspect-encyclopedia.md
examples/output/: sample_report.txt  sample_timeline.json
output/652d5667/: report.txt  state.json  timeline.json
src/atlas/: __init__.py
src/atlas/cli/: __init__.py  commands.py  config_loader.py  main.py
src/atlas/core/: __init__.py  cases.py  config.py  graph.py  models.py  orchestrator.py  permission_map.py  plugin.py  safety.py  state.py  telemetry.py  types.py
src/atlas/executor/: __init__.py  base.py  engine.py  pace.py  session.py
src/atlas/executor/actions/: __init__.py  iam.py  sts.py
src/atlas/gui/: __init__.py  __main__.py  app.py  export_report.py  server.py
src/atlas/gui/web/: graph.html
src/atlas/knowledge/: __init__.py  api_profiles.py  pathfinding_loader.py
src/atlas/knowledge/data/: api_detection_profiles.yaml  attack_patterns.yaml  edge_rulebook.yaml  guardduty_findings.yaml  post_exploitation_operational.yaml
src/atlas/planner/: __init__.py  ai_target_selector.py  attack_graph.py  chain_finder.py  detection.py  engine.py  explainer.py  guardrail_analyzer.py  noise_budget.py  path_finder.py  policy_inference.py
src/atlas/planner/strategies/: __init__.py  base.py  privesc.py
src/atlas/plugins/: __init__.py  base_aws.py  registry.py
src/atlas/plugins/techniques/: __init__.py  iam_policy_simulation.py  identity_discovery.py  permission_enumeration.py  role_trust_analysis.py  s3_enumeration.py  security_group_enumeration.py
src/atlas/query/: __init__.py  engine.py  rulebook.py
src/atlas/recon/: __init__.py  base.py  engine.py  scanner.py
src/atlas/recon/auth/: __init__.py  backup.py  guardrail.py  identity.py  logging_config.py  policy.py  resource.py  trust.py
src/atlas/recon/collectors/: __init__.py  backup.py  bruteforce_perms.py  enumerate_iam_data.py  guardrail.py  identity.py  logging_config.py  permission_resolver.py  policy.py  resource.py  trust.py
src/atlas/recon/permissions/: __init__.py  bruteforce.py  enumerate_iam_data.py  resolver.py
src/atlas/telemetry/: __init__.py  recorder.py  schema.py
src/atlas/utils/: __init__.py  aws.py  key_decoder.py  logging.py  rate_limit.py
src/atlas_aws_emulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_config.py  test_core_orchestrator.py  test_core_plugin.py  test_core_safety.py  test_core_state.py  test_plugins_registry.py  test_recon_scanner.py  test_telemetry.py
tests/unit/core/: test_graph.py  test_permission_map.py  test_safety.py  test_telemetry.py
tests/unit/planner/: test_attack_graph.py  test_detection.py  test_noise_budget.py  test_path_finder.py
tests/unit/recon/: test_bruteforce.py  test_tier1_policy.py
