[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas"
version = "2.0.0-alpha"
description = "Next-generation AWS Cloud Adversary Emulation platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Atlas Team" }]
keywords = ["aws", "security", "adversary-emulation", "red-team", "cloud-security"]
dependencies = [
    "boto3>=1.35.0",
    "aioboto3>=13.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "networkx>=3.2",
    "structlog>=24.1.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "aiofiles>=24.1.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "types-pyyaml>=6.0.0",
    "types-aiofiles>=24.1.0",
]

[project.scripts]
atlas = "atlas.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --tb=short -x"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ANN"]
